--- a/starship.toml
+++ b/starship.toml
@@ -3,75 +3,86 @@
 # Inserts a blank line between shell prompts
 add_newline = true
 
+# Change command timeout from 500 to 1000 ms
+command_timeout = 1000
+
 # Change the default prompt format
 format = """\
-[╭╴](238)$env_var\
-$all[╰─](238)$character"""
+[╭╴](244)$env_var \
+$all$character"""
 
 # Change the default prompt characters
 [character]
-success_symbol = "[](238)"
-error_symbol = "[](238)"
+success_symbol = "[╰─](244)"
+error_symbol = "[╰─](196)"
 
 # Shows an icon that should be included by zshrc script based on the distribution or os
 [env_var.STARSHIP_DISTRO]
-format = '[$env_value](bold white)'  # removed space between distro and rest for pwsh
+format = '[$env_value](bold white)'
 variable = "STARSHIP_DISTRO"
 disabled = false
 
 # Shows the username
 [username]
-style_user = "white bold"
-style_root = "black bold"
+style_user = "bold white"
+style_root = "bold red"
 format = "[$user]($style) "
-disabled = true  # disable in powershell
-show_always = false
+disabled = false
+show_always = true
+
+[hostname]
+ssh_only = false
+format = "on [$hostname](bold yellow) "
+disabled = false
 
 [directory]
-truncation_length = 3
+truncation_length = 6
 truncation_symbol = "…/"
 home_symbol = " ~"
 read_only_style = "197"
 read_only = "  "
 format = "at [$path]($style)[$read_only]($read_only_style) "
+truncate_to_repo = false
 
 [git_branch]
-symbol = " "
-format = "on [$symbol$branch]($style) "
-truncation_length = 4
+symbol = " "
+format = '\[[$symbol$branch]($style) '
+# truncation_length = 4
 truncation_symbol = "…/"
 style = "bold green"
 
+[git_metrics]
+added_style = "bold blue"
+format = "[+$added]($added_style)/[-$deleted]($deleted_style) "
+disabled = false
+
 [git_status]
-format = '[\($all_status$ahead_behind\)]($style) '
+format = '[$all_status$ahead_behind]($style)\]'
 style = "bold green"
-conflicted = "🏳"
-up_to_date = " "
-untracked = " "
-ahead = "⇡${count}"
-diverged = "⇕⇡${ahead_count}⇣${behind_count}"
-behind = "⇣${count}"
-stashed = " "
-modified = " "
-staged = '[++\($count\)](green)'
-renamed = "襁 "
-deleted = " "
+conflicted = "🔀"
+up_to_date = "✅"
+modified = "📝"
+stashed = "📦"
+untracked = "👁‍🗨"
+deleted = "📛"
+renamed = "🔤"
+ahead = "⬆️${count}"
+behind = "⬇️${count}"
+diverged = "🧬⬆️${ahead_count}⬇️${behind_count}"
+staged = '[⏩\($count\)](green)'
 
-[terraform]
-format = "via [ terraform $version]($style) 壟 [$workspace]($style) "
+[cmd_duration]
+format = '\[[🕑$duration]($style)\]'
 
-[vagrant]
-format = "via [ vagrant $version]($style) "
-
-[docker_context]
-format = "via [ $context](bold blue) "
-
-[helm]
-format = "via [ $version](bold purple) "
+[kubernetes]
+format = 'via [ﴱ $context\($namespace\)](bold purple) '
+disabled = false
 
 [python]
+format = 'via [${symbol}${pyenv_prefix}(${version} )(\($virtualenv\) )]($style)'
 symbol = " "
 python_binary = "python3"
+disabled = true
 
 [nodejs]
 format = "via [ $version](bold green) "
@@ -79,10 +90,4 @@ disabled = true
 
 [ruby]
 format = "via [ $version]($style) "
-
-[kubernetes]
-format = 'on [ $context\($namespace\)](bold purple) '
-disabled = false
-[kubernetes.context_aliases]
-"clcreative-k8s-staging" = "cl-k8s-staging"
-"clcreative-k8s-production" = "cl-k8s-prod"
+disabled = true
